# opencode-kimi-free-opencode-keys-wrapper-android-apk

./: .gitignore  AGENTS.md  BUILD.md  PROJECT-INIT-PROMPT. md  README.md  STATUS.md  TERMUX.md  USAGE.md  auto-git.sh  build-android.sh  bundle-packages.sh  install-prerequisites.sh  launch-emulator.sh  setup-nodejs-mobile.sh  simple-emulator.sh  termux-build.sh
AGENT_SCRATCH/: AGENTS.md  DECISIONS.md  WORKFLOW.md
docs/: PACKAGE-BUNDLING.md
kilo-companion-app/: NODEJS_SETUP.md  build.gradle.kts  gradle.properties  gradlew  local.properties  settings.gradle.kts  setup-nodejs-mobile.sh
kilo-companion-app/app/: build.gradle.kts
kilo-companion-app/app/src/main/: AndroidManifest.xml
kilo-companion-app/app/src/main/cpp/: CMakeLists.txt  native-node.cpp
kilo-companion-app/app/src/main/java/com/kilo/companion/: AuthHandlerActivity.kt  CodePalApplication.kt  KiloCompanionApplication.kt  MainActivity.kt
kilo-companion-app/app/src/main/java/com/kilo/companion/data/: SharedStorageManager.kt
kilo-companion-app/app/src/main/java/com/kilo/companion/nodejs/: NodeRuntime.kt  NodeService.kt
kilo-companion-app/app/src/main/java/com/kilo/companion/ui/screens/: ConfigManagerScreen.kt  HomeScreen.kt  RuntimeScreen.kt  WebViewScreen.kt
kilo-companion-app/app/src/main/java/com/kilo/companion/ui/theme/: Color.kt  Theme.kt  Type.kt
kilo-companion-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
kilo-companion-app/app/src/main/res/values/: strings.xml  themes.xml
kilo-companion-app/app/src/test/java/com/kilo/companion/: SharedStorageManagerTest.kt
kilo-companion-app/gradle/wrapper/: gradle-wrapper.properties
